force-app/main/default/objects/Bank_Transaction__c/Bank_Transaction__c.object-meta.xml
<CustomObject>
    <label>Bank Transaction</label>
    <nameField>
        <displayFormat>BT-{0000}</displayFormat>
        <label>Bank Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>