force-app/main/default/objects/Bank_Transaction__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Beneficiary</label>
    <referenceTo>Beneficiary__c</referenceTo>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>