force-app/main/default/objects/Bank_Transaction__c/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <label>Device</label>
    <length>255</length>
    <type>Text</type>
</CustomField>