force-app/main/default/objects/Bank_Transaction__c/fields/From_Account__c.field-meta.xml
<CustomField>
    <fullName>From_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>From Account</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>