force-app/main/default/objects/Bank_Transaction__c/fields/Related_SMS__c.field-meta.xml
<CustomField>
    <fullName>Related_SMS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related SMS</label>
    <referenceTo>SMS_Message__c</referenceTo>
    <relationshipName>Transaction_records</relationshipName>
    <type>Lookup</type>
</CustomField>