force-app/main/default/objects/Bank_Transaction__c/fields/Related_SMS_Message__c.field-meta.xml
<CustomField>
    <fullName>Related_SMS_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related SMS Message</label>
    <referenceTo>SMS_Message__c</referenceTo>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>