force-app/main/default/objects/Bank_Transaction__c/fields/SMS_Content__c.field-meta.xml
<CustomField>
    <fullName>SMS_Content__c</fullName>
    <label>SMS Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>