force-app/main/default/objects/Bank_Transaction__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Divident</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>