force-app/main/default/objects/Bank_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>From_Account__c</columns>
    <columns>Beneficiary_Name__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Created_From__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>